fix: fix footerlogo spacing styling

--- a/src/components/FooterLogo/FooterLogo.module.css
+++ b/src/components/FooterLogo/FooterLogo.module.css
@@ -9,14 +9,13 @@
   width: 1180px;
   display: flex;
 }
-.wrapper>div {
-  flex: 1;
-}
 .logo {
+  width: fit-content;
   display: flex;
   align-items: center;
   gap: 0.5rem;
   color: #fff;
+  cursor: pointer;
 }
 .logo>svg {
   height: 26px;
@@ -26,6 +25,7 @@
   font-size: 20px;
 }
 .button {
+  flex: 1;
   display: flex;
   justify-content: end;
 }
